--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -12,12 +12,13 @@
 
 .card > .img-container {
     height: 60%;
+   
     overflow: hidden;
     text-align: center;
     background:#6CADDC;
   }
   .card > .img-container > img {
-    width: 60%
+   width: 100%;
   }
   
   .card > .content {
